// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/ViewToggle All Long Text Lengths 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      This one is really long because everyone likes those
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    This one is really long because everyone likes those
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    This one is really long because everyone likes those
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    This one is really long because everyone likes those
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle Default First Option 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      I'm active
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    I'm active
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle Differing Text Lengths 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      This one is really long because everyone likes those
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    This one is really long because everyone likes those
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    This is medium
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Short
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle Example Controlled 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Orange
    </div>
  </div>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Apple
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Banana
  </button>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Orange
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle Example Dynamic Options 1`] = `
Array [
  <div
    data-css-13xtft9=""
    role="radiogroup"
  >
    <div
      aria-hidden={true}
      data-css-w8tgx1=""
      style={Object {}}
    >
      <div
        data-css-1jyyyen=""
      >
        Item: 
        1
      </div>
    </div>
    <button
      aria-selected={true}
      data-css-kcifgk=""
      onClick={[Function]}
      role="radio"
    >
      Item: 
      1
    </button>
    <button
      aria-selected={false}
      data-css-118ipcw=""
      onClick={[Function]}
      role="radio"
    >
      Item: 
      2
    </button>
  </div>,
  <div
    data-css-18ma6i3=""
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      remove
    </button>
    <button
      disabled={false}
      onClick={[Function]}
    >
      add
    </button>
  </div>,
]
`;

exports[`Storyshots Components/ViewToggle Explicit Active First 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      I'm active
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    I'm active
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle Explicit Active Second 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 2
    </div>
  </div>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    I'm active
  </button>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle Explicit Active Third 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 3
    </div>
  </div>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    I'm active
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle Max Options 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 1
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle One Option 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 1
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle Three Options 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 1
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 3
  </button>
</div>
`;

exports[`Storyshots Components/ViewToggle Two Options 1`] = `
<div
  data-css-13xtft9=""
  role="radiogroup"
>
  <div
    aria-hidden={true}
    data-css-w8tgx1=""
    style={Object {}}
  >
    <div
      data-css-1jyyyen=""
    >
      Option 1
    </div>
  </div>
  <button
    aria-selected={true}
    data-css-kcifgk=""
    onClick={[Function]}
    role="radio"
  >
    Option 1
  </button>
  <button
    aria-selected={false}
    data-css-118ipcw=""
    onClick={[Function]}
    role="radio"
  >
    Option 2
  </button>
</div>
`;
